--- a/Windows/ReleaseYourFingers/MainWindow.xaml
+++ b/Windows/ReleaseYourFingers/MainWindow.xaml
@@ -9,8 +9,8 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="35" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="35" />
+            <RowDefinition />
+            <RowDefinition Height="117" />
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Grid.Row="0" Name="ButtonBar">
             <ComboBox x:Name="CameraList" Width="100" Margin="5,5,0,5" Loaded="CameraList_Loaded" />
@@ -18,25 +18,15 @@
             <Button Content="Stop Camera" Padding="5,0" Margin="5,5,0,5" Click="StopButton_Click" />
             <TextBlock VerticalAlignment="Center" Margin="15,5,0,5" Text="Mode:" />
             <ComboBox x:Name="ModeList" Width="100" Margin="5,5,0,5" Loaded="ModeList_Loaded" SelectionChanged="ModeList_SelectionChanged" />
-            <Ellipse x:Name="Indicator" Stroke="Black" Width="71" Margin="0,5" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Right">
-                <Ellipse.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform/>
-                        <SkewTransform AngleX="-42.414"/>
-                        <RotateTransform/>
-                        <TranslateTransform X="11.42"/>
-                    </TransformGroup>
-                </Ellipse.RenderTransform>
-            </Ellipse>
         </StackPanel>
-        <Button Content="Show/Hide Settings" Padding="5,0" Margin="5" Click="SettingsButton_Click" HorizontalAlignment="Right" />
-        <Grid Grid.Row="1">
+        <Button Content="Show/Hide Settings" Padding="5,0" Margin="0,5,5,5" Click="SettingsButton_Click" HorizontalAlignment="Right" Width="126" />
+        <Grid Grid.Row="1" Margin="0,0,0,4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Image x:Name="LeftImage" Grid.Column="0" Margin="5" />
-            <Image x:Name="RightImage" Grid.Column="1" Margin="5" Panel.ZIndex="1" />
+            <Image x:Name="LeftImage" Grid.Column="0" Margin="5,5,5,68" />
+            <Image x:Name="RightImage" Grid.Column="1" Margin="5,5,5,68" Panel.ZIndex="1" />
             <StackPanel Visibility="{Binding Source={StaticResource Settings}, Path=Default.SettingsPanelVisibility, Mode=TwoWay}" Grid.Column="1" Panel.ZIndex="2" Name="SettingsPanel" Background="LightGray" VerticalAlignment="Top" Margin="5">
                 <TextBlock Margin="5" Grid.Row="0" FontWeight="Bold" Text="Settings"/>
                 <Grid>
@@ -72,6 +62,16 @@
                 <Button Margin="5" Content="Save" Click="SaveSettingsButton_Click" />
             </StackPanel>
         </Grid>
-        <TextBlock Name="MessageArea" Margin="5,0,5,4" Grid.Row="2" VerticalAlignment="Center" Height="31" FontSize="24" />
+        <TextBlock x:Name="MessageArea" Margin="5,64,10,4" Grid.Row="2" FontSize="24" />
+        <Ellipse x:Name="Indicator" Stroke="Black" RenderTransformOrigin="3.773,0.545" Margin="322,2,333,57" Grid.Row="2" HorizontalAlignment="Center" Width="62">
+            <Ellipse.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="0.495"/>
+                    <RotateTransform/>
+                    <TranslateTransform X="1.626"/>
+                </TransformGroup>
+            </Ellipse.RenderTransform>
+        </Ellipse>
     </Grid>
 </Window>
